feat: information popup added (#73)
